syntax = "proto3";
import "product.proto";

option java_multiple_files = true;
option java_package = "com.unla.servicegrpc.grpc";

service shoppingcart{
  //rpc comprar(RequestCart) returns(ResponseCart);
  rpc comprar(RequestCart) returns(ResponseInvoice);
  rpc listUserPurchaseShoppingCart(getIdUser) returns(getList);
}

message ResponseInvoice{
  string purchaseDate = 2;
  sellerCart seller = 3;
  buyerCart buyer = 4;
  repeated ResponseInvoiceProducts products = 5;
  double totalAmount = 6;
}

message ResponseInvoiceProducts{
  string name = 1;
  double price = 2;
  int32 quantity = 3;
}

message sellerCart{
  string name = 1;
  string lastname = 2;
  string username = 3;
  string email = 4;
}

message buyerCart{
  string name = 1;
  string lastname = 2;
  string username = 3;
  string email = 4;
}

message getIdUser{
  int64 userId = 1;
}

message RequestCart{
  int64 userCompraId = 1;
  string purchaseDate = 2;
  repeated ItemCart itemCart =3;
}

message ResponseCart{
  int64 shoppingCartId = 1;
  string purchaseDate = 2;
  UserCompra userCompra = 3;
  repeated ProductData itemProduct=4;
  double precioFinal = 5;
}

message getList{
  repeated ResponseCart responseCart = 1;
}

message ItemCart{
  int64 itemId = 1;
  int32 itemQuantity = 2;
}

message UserCompra{
  int64 userCompraId = 1;
  string username = 2;
}

message ProductData{
  int64 id = 1;
  string name = 2;
  string category = 3;
  int32 itemQuantity = 4;
  double price = 5;
  int64 userId = 6;

}